--- a/css/verdemoderna.css
+++ b/css/verdemoderna.css
@@ -1,4 +1,4 @@
-/* Based on Dave Shea's 'Verde Moderna', CSS Zen Garden submission 214 : http://www.csszengarden.com/214/214.css 
+/* Inspired by Dave Shea's 'Verde Moderna', CSS Zen Garden submission 214 : http://www.csszengarden.com/214/214.css 
   but without the graphics, which are copyrighted, with more contrasting colours, etc.
   In fact, there's not much left of Shea's original design.
 */
@@ -73,7 +73,7 @@ h2 { /* h3 in David Shea's CSS */
 
 p {
   margin: 0.75em 0;
-  line-height: 2;
+  line-height: 1.3;
 }
 
 #footer {
