--- a/css/verdemoderna.css
+++ b/css/verdemoderna.css
@@ -32,7 +32,7 @@ a {
   height: 60px;
   padding: 20px 0 70px 0;
 
-  background: #2d6360 50% 0 url(LongjiTerrace_PublicDomain_narrow01.jpg) no-repeat; /* old IE fallback */
+  background: #2d6360 50% 0 url('./LongjiTerrace_PublicDomain_narrow01.jpg') no-repeat; /* old IE fallback */
 
   /*background: #2d6360 50% 0 ;
   background-image: linear-gradient(#2d6360, #6C9875);*/
