--- a/css/stuttgartbib.css
+++ b/css/stuttgartbib.css
@@ -49,12 +49,12 @@ h1 {
   font-family: 'Julius Sans One', 'Trebuchet MS', Verdana, sans-serif;
   /*text-transform: uppercase;*/
 
-  background: rgba(0, 0, 0, 0.2);
+  /*background: rgba(0, 0, 0, 0.2);*/
   height: 113px; /* height of #header minus h1's top padding */
 }
 
 h1 { font-size: 2.8em; }
-#home h1 { font-size: 3.2em; }
+#home h1 { font-size: 3.2em; letter-spacing: 1.3px; }
 
 h1 .h1txt {
   background: rgba(0, 0, 0, 0.4);
@@ -81,6 +81,9 @@ p {
 }
 
 #footer {
-  border-top: 1px solid #2e484c;
   margin-top: 60px;
+  border: 1px solid #51739C;
+  border-left: 20px solid #51739C;
+  padding-left: 10px;
+  font-size: 0.9em;
 }
