--- a/css/verdemoderna.css
+++ b/css/verdemoderna.css
@@ -17,14 +17,13 @@ body {
 }
 
 a {
-  color: #0A6879; /* was #0d8ba1 */
-  /*text-decoration: none;*/
+  color: #0A6879;
 }
   a:visited {
-    color: #325050; /* #1a5952 not dark enough ? */
+    color: #325050;
   }
   a:hover, a:focus {
-    color: #2e484c; /* #0599c2 not dark enough ? */
+    color: #2e484c;
     text-decoration: underline;
   }
 
@@ -34,8 +33,6 @@ a {
 
   background: #2d6360 50% 0 url('./LongjiTerrace_PublicDomain_narrow01.jpg') no-repeat; /* old IE fallback */
 
-  /*background: #2d6360 50% 0 ;
-  background-image: linear-gradient(#2d6360, #6C9875);*/
   text-align: left;
 }
 
@@ -64,13 +61,12 @@ h1 .h1txt {
   margin-left: 20px;
 }
 
-h2 { /* h3 in David Shea's CSS */
+h2 { 
   margin: 28px 0 0 0;
   color: #2e484c;
   font-family: 'Julius Sans One', 'Trebuchet MS', Verdana, sans-serif;
   font-size: 1.8em;
   font-weight: normal;
-  /*text-transform: uppercase;*/
 }
 
 p {
