--- a/css/stuttgartbib.css
+++ b/css/stuttgartbib.css
@@ -1,16 +1,15 @@
+@import url("righthand_fixed_navigation_layout.css");
 
 html {
   padding: 0;
   margin: 0;
 }
 body {
-  margin: 10px;
   color: #000;
   background: #fff;
   font-family: 'Libre Baskerville', 'Trebuchet MS', Verdana, Helvetica, sans-serif;
   font-size: 1em;
   line-height: 1.4em; letter-spacing: .01em; word-spacing: 0.1em;
-  max-width: 1710px; /* 20 px less than width of StuttgartBib.jpg*/
 }
 
 a {
@@ -24,13 +23,15 @@ a {
     text-decoration: underline;
   }
 
-#header {
-  height: 133px; /* height and width of StuttgartBib.jpg*/
-  width: 1730px;
+header {
   padding: 0;
   background: #5583B5 50% 0 url('./StuttgartBib.jpg') repeat-x; /* old IE fallback */
   background-position: left;
   text-align: left;
+  /* @@TODO create higher header background image 
+    + height & width of the image:
+    + height: @@@px; width: 1521px; max-width: 75%
+  */
 }
 
 h1 {
@@ -39,7 +40,7 @@ h1 {
   color: #fff;
   background-color: transparent;
   font-weight: normal;
-  line-height: 1.1em; /* CS: added to prevent overlapping text on browser zoom */
+  line-height: 1.35em; /* CS: added to prevent overlapping text on browser zoom */
 
   font-family: 'Julius Sans One', 'Trebuchet MS', Verdana, sans-serif;
 
@@ -54,13 +55,8 @@ h1 .h1txt {
   padding: 4px;
 }
 
-#main, #footer {
-  margin-right: 20px;
-  margin-left: 20px;
-}
 
 h2 {
-  margin: 28px 0 0 0;
   color: #2e484c;
   font-family: 'Julius Sans One', 'Trebuchet MS', Verdana, sans-serif;
   font-size: 1.8em;
@@ -72,10 +68,9 @@ p {
   line-height: 1.3;
 }
 
-#footer {
-  margin-top: 60px;
+footer {
   border: 1px solid #51739C;
   border-left: 20px solid #51739C;
   padding-left: 10px;
-  font-size: 0.9em;
 }
+
