--- a/css/verdemoderna.css
+++ b/css/verdemoderna.css
@@ -76,6 +76,13 @@ p {
   line-height: 1.3;
 }
 
+kbd {
+  font-family: 'Consolas', 'Andale Mono', Courier, 'Lucida Sans Unicode', monospace;
+  background-color: black;
+  color: #00FF00;
+  padding-left: 4px; padding-right: 4px;
+}
+
 footer {
   border-top: 1px solid #2e484c;
   margin-top: 60px;
