--- a/css/righthand_fixed_navigation_layout.css
+++ b/css/righthand_fixed_navigation_layout.css
@@ -18,7 +18,7 @@ header {
 nav {
   position: fixed;
   width: 16em; height: auto;
-  padding: none;
+  /*padding: none;*//*'none' is not valid; 0 has different effect*/
   top: .5em; right: 20px; bottom: auto; left: auto;
   padding-bottom: 10px;
 }
