--- a/css/stuttgartbib.css
+++ b/css/stuttgartbib.css
@@ -15,13 +15,13 @@ body {
 a {
   color: #0A6879;
 }
-  a:visited {
-    color: #325050;
-  }
-  a:hover, a:focus {
-    color: #2e484c;
-    text-decoration: underline;
-  }
+a:visited {
+  color: #325050;
+}
+a:hover, a:focus {
+  color: #2e484c;
+  text-decoration: underline;
+}
 
 header {
   padding: 0;
@@ -157,5 +157,21 @@ footer {
   border: 1px solid #51739C;
   border-left: 20px solid #51739C;
   padding-left: 10px;
+}
+
+section {
+  width: 46%;
+  float: left;
+  clear: none;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+div.other {
+  width: 100%;
+  clear: left;
+}
+
+hr {
+  color: #51739C;
 }
 
