--- a/css/righthand_floating_navigation_layout.css
+++ b/css/righthand_floating_navigation_layout.css
@@ -1,5 +1,5 @@
 
-header, nav, main, footer {
+header, div.header, nav, main, div.main, footer, div.footer {
   /*max-width: 60em;*/
   clear: both;
   display: block;
@@ -7,16 +7,16 @@ header, nav, main, footer {
   padding-left: 10px;
 }
 
-header, main, footer {
+header, div.header, main, div.main, footer, div.footer {
   margin-right: 23em;
 }
 
-header {
+header, div.header {
   padding-top: 8px; padding-bottom: 4px;
   margin-bottom: 24px;
 }
 
-header, main, nav {
+header, div.header, main, div.main, nav {
   clear: none;
 }
 
@@ -95,22 +95,23 @@ nav a:active {
   padding-left: 2px;
 }
 
-main a, footer a {
+main a, div.main a, footer a,, div.footer a {
   padding-right: 2px; padding-left: 2px;
 }
 
-footer {
+footer, div.footer {
   margin-top: 60px;
   padding-left: 4px;
   border-width: 4px 0px;
   border-style: solid;
 }
 
-footer p {
+footer p, div.footer p {
   font-size: 0.94em;
 }
 
-footer p a[rel=license]:first-child:hover, footer p a[rel=license]:first-child:focus {
+footer p a[rel=license]:first-child:hover, div.footer p a[rel=license]:first-child:hover,
+footer p a[rel=license]:first-child:focus, div.footer p a[rel=license]:first-child:focus {
   background-color: transparent;
 }
 
